# OpenGL_HW1

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: config.h  glad.c  main.cpp
src/Shader/: default.frag  default.vert
src/header/: object.h
